force-app/main/default/objects/Lead/fields/ABN_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>ABN_Current_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABN Current Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>