force-app/main/default/objects/Lead/fields/ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status__c</fullName>
    <formula>IF(ABN_Current_Status__c == &apos;Active&apos;,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Positive&quot;), IF(ABN_Current_Status__c == &apos;Cancelled&apos; , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Negative&quot;),
IF(ABN_Current_Status__c == &apos;Neutral&apos; ,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Neutral&quot;),IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Neutral&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Status</label>
    <type>Text</type>
</CustomField>