force-app/main/default/objects/Lead/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <inlineHelpText>This field is being used for lead scoring for AU Agency Accounts</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry - Platinum</fullName>
            </value>
            <value>
                <fullName>Industry - Gold</fullName>
            </value>
            <value>
                <fullName>Industry - Silver</fullName>
            </value>
            <value>
                <fullName>Industry - Bronze</fullName>
            </value>
            <value>
                <fullName>Industry - White</fullName>
            </value>
            <value>
                <fullName>Industry - Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>