force-app/main/default/objects/Lead/fields/Agency_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sales_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is being used for lead scoring for AU Agency Accounts</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>