force-app/main/default/objects/Lead/fields/Auto_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will make the user to auto create an opportunity upon conversion</description>
    <label>Auto Create (Opportunity)?</label>
    <type>Checkbox</type>
</CustomField>