force-app/main/default/objects/Lead/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <inlineHelpText>Freight: Users always need to select &quot;Freight&quot;</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>B&amp;G</fullName>
            </value>
            <value>
                <fullName>Supplier/Commercial Partner</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Qantas Business Rewards</fullName>
                <isActive>false</isActive>
                <label>Qantas Business Rewards</label>
            </value>
            <value>
                <fullName>Qantas Frequent Flyer</fullName>
                <isActive>false</isActive>
                <label>Qantas Frequent Flyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>