force-app/main/default/objects/Lead/fields/EnquiryType__c.field-meta.xml
<CustomField>
    <fullName>EnquiryType__c</fullName>
    <description>Enquiry Type ---- (text) field on Lead and Opportunity (Note: drop-down on web-form for partner platform)
interested in connecting directly to the Qantas Distribution Platform
interested in connecting to the Qantas Distribution Platform via Qantas approved partner connection 
Other</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enquiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>