force-app/main/default/objects/Lead/fields/Freight_Account_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Account_Business_Type__c</fullName>
    <description>Freight - To capture the business type for Freight Accounts.</description>
    <inlineHelpText>For new Country account, select the appropriate customer type (i.e. Freight Fowarder, Shipper, etc.). Only select &quot;Branch&quot; for the creation of a new Branch account</inlineHelpText>
    <label>Account Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight Forwarder</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Partner Airline</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Online Booking Tool</fullName>
            </value>
            <value>
                <fullName>Mobile Developer</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
            <value>
                <fullName>Online Travel Agent (OTA)</fullName>
            </value>
            <value>
                <fullName>Travel Management Company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Airline</fullName>
                <isActive>false</isActive>
                <label>Client Airline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>