force-app/main/default/objects/Lead/fields/Freight_City__c.field-meta.xml
<CustomField>
    <fullName>Freight_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Freight - To capture the City in which the Contact is located in</description>
    <inlineHelpText>To capture the city which the Contact is located in</inlineHelpText>
    <label>City</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Leads (City)</relationshipLabel>
    <relationshipName>City</relationshipName>
    <type>Lookup</type>
</CustomField>