force-app/main/default/objects/Lead/fields/Freight_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Freight_Clearance__c</fullName>
    <description>Freight - To store the clearance number to be entered into iCargo/Scorpio</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clearance #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>