force-app/main/default/objects/Lead/fields/Freight_Corporate_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Freight_Corporate_Identifier__c</fullName>
    <description>Freight - To capture the unique identifier for Freight Accounts.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Master group code which identifies all accounts within a hierarchy in Salesforce (e.g. DGF for all DHL Global Fowarding accounts)</inlineHelpText>
    <label>Freight Corporate Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>