force-app/main/default/objects/Lead/fields/Freight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Freight_Destination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination</label>
    <length>30</length>
    <type>Text</type>
</CustomField>