force-app/main/default/objects/Lead/fields/Freight_eQ_Customer__c.field-meta.xml
<CustomField>
    <fullName>Freight_eQ_Customer__c</fullName>
    <description>Freight - Unique values form eQ system will be stored in this attribute</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer Account number in Oracle eQ used for invoicing</inlineHelpText>
    <label>Customer #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>