force-app/main/default/objects/Lead/fields/Freight_Lead_Scoring_Table__c.field-meta.xml
<CustomField>
    <fullName>Freight_Lead_Scoring_Table__c</fullName>
    <description>Freight - Stores the lead scoring table for Freight Accounts</description>
    <formula>IMAGE(&apos;https://qantas.file.force.com/servlet/servlet.FileDownload?file=0159000000F0tkI&apos;, &apos;Freight Lead Scoring Table&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fields required to reach 100 points to convert the lead into an account</inlineHelpText>
    <label>Freight Lead Scoring Table</label>
    <type>Text</type>
</CustomField>