force-app/main/default/objects/Lead/fields/Freight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Freight_Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>