force-app/main/default/objects/Lead/fields/Freight_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Freight_Revenue_Stream__c</fullName>
    <description>Freight - To capture the revenue stream for Freight Accounts.</description>
    <inlineHelpText>Indicates if the Account is a Domestic Account, International Account or both</inlineHelpText>
    <label>Revenue Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>DOM/INT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>