force-app/main/default/objects/Lead/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <description>Frequent Flyer Number of the lead</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>