force-app/main/default/objects/Lead/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Company&apos;s legal name (i.e. as it would appear in a contract)</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>