force-app/main/default/objects/Lead/fields/Loyalty_Lead_Scoring_Table__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Lead_Scoring_Table__c</fullName>
    <description>Returns loyalty scoring table image</description>
    <formula>IMAGE(&quot;/resource/1505804999000/Loyalty_Lead_Scoring_Table?isdtp=p1&quot;, &quot;Text&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Lead Scoring Table</label>
    <type>Text</type>
</CustomField>