force-app/main/default/objects/Lead/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Display messages from web to lead form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>