force-app/main/default/objects/Lead/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Use this to create an opportunity with the correct type upon lead conversion.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Partnerships</fullName>
            </value>
            <value>
                <fullName>Business and Government</fullName>
            </value>
            <value>
                <fullName>Charters</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>SME Product</fullName>
            </value>
            <value>
                <fullName>Sales Development</fullName>
            </value>
            <value>
                <fullName>DPP Onboarding</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>