force-app/main/default/objects/Lead/fields/Point_of_Sales_Country__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sales_Country__c</fullName>
    <description>To record Point of Sales (Country),as part of Partner Platform Web To Lead Registration page</description>
    <label>Point of Sales (Country)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>