force-app/main/default/objects/Lead/fields/Proposed_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Revenue_Amount__c</fullName>
    <label>Proposed Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>