force-app/main/default/objects/Lead/fields/ShowError__c.field-meta.xml
<CustomField>
    <fullName>ShowError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowError</label>
    <type>Checkbox</type>
</CustomField>