force-app/main/default/objects/Lead/fields/Unqualified_reasons__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_reasons__c</fullName>
    <description>Freight to capture reasons of unqualified lead.</description>
    <label>Unqualified reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account no longer required</fullName>
            </value>
            <value>
                <fullName>Credit declined</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements</fullName>
            </value>
            <value>
                <fullName>Products not suitable</fullName>
            </value>
            <value>
                <fullName>Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>