force-app/main/default/objects/Lead/recordTypes/Freight.recordType-meta.xml
<RecordType>
    <fullName>Freight</fullName>
    <active>true</active>
    <businessProcess>Freight</businessProcess>
    <description>Record type for Freight Manual Lead Creation</description>
    <label>Freight</label>
</RecordType>