force-app/main/default/objects/Lead/recordTypes/Freight_Salescockpit.recordType-meta.xml
<RecordType>
    <fullName>Freight_Salescockpit</fullName>
    <active>true</active>
    <businessProcess>Freight</businessProcess>
    <description>Freight:Record type for Salescockpit Integration Only</description>
    <label>Freight Salescockpit</label>
</RecordType>