force-app/main/default/objects/Lead/validationRules/State_Code_is_mandatory_for_AU_Agency.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Code_is_mandatory_for_AU_Agency</fullName>
    <active>true</active>
    <description>Created for To avoid Lead Convert Error for Agency</description>
    <errorConditionFormula>AND(ISPICKVAL( New_Account_Type__c , &quot;Agency&quot;), Country   = &quot;AU&quot;, ISBLANK( TEXT(StateCode ) ) )</errorConditionFormula>
    <errorMessage>Please provide State/Province</errorMessage>
</ValidationRule>