force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Data_Quality_Score_for_All__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Radha</value>
    </filters>
    <label>All Open Leads</label>
    <sharedTo>
        <group>QF</group>
        <roleAndSubordinatesInternal>QF_DOM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>QF_DOM_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>QF_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>