force-app/main/default/objects/Lead/listViews/Competitor_MI.listView-meta.xml
<ListView>
    <fullName>Competitor_MI</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>ABN_Tax_Reference__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Estimated_Total_Air_Travel_Spend__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Competitor MI</label>
    <sharedTo>
        <roleAndSubordinatesInternal>QF_DOM_Sales_SME</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>