force-app/main/default/objects/Lead/listViews/Freight_Inside_Sales_AU_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Freight_Inside_Sales_AU_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Freight Sales New Business AU Queue</label>
    <queue>Freight_Inside_Sales_AU_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>